Pushing a update since I have not done one in some time

--- a/uthinx/app/templates/createTemplate.hbs
+++ b/uthinx/app/templates/createTemplate.hbs
@@ -1,9 +1,10 @@
-<header>Create Header
-    <a href="#" class="close-btn">Close</a>
+<header class="uthinx-create-header">Create Header
+    <a href="#" class="close-btn">&nbsp;</a>
 </header>
 <section id="uthinx-create-swiper" class="swiper-container">
     <div id="" class='swiper-wrapper'>
         <article class="swiper-slide" data-catagory="1">
+            <!-- -->
             <div class="uthinx-switch">
                 <input type="radio" class="uthinx-switch-input" name="view" value="week" id="week" checked>
                 <label for="week" class="uthinx-switch-label switch-label-off">ON</label>
@@ -58,6 +59,7 @@
         <article class="swiper-slide" data-catagory="5">Fifth Slide</article>
         <article class="swiper-slide" data-catagory="6">Sixth Slide</article>
         <article class="swiper-slide" data-catagory="7">Seventh Slide, Glide</article>
+        <!-- -->
     </div>
 </section>
 <footer>
