--- a/uthinx/app/templates/searchResultsTemplate.hbs
+++ b/uthinx/app/templates/searchResultsTemplate.hbs
@@ -1,12 +1,9 @@
-{{#if this.results}}
-
-    {{#each this.results}}
+{{#if this}}
+    {{#each []}}
     <li>
         Result that is something
     </li>
     {{/each}}
 {{else}}
-    <li id="uthinx-search-results-msg">
-        Sorry we could not find any {{ this.type }} polls avaliable to you.
-    </li>
+    {{#searchResultsEmpty}}{{/searchResultsEmpty}}
 {{/if}}
