--- a/uthinx/app/templates/searchTemplate.hbs
+++ b/uthinx/app/templates/searchTemplate.hbs
@@ -1,19 +1,26 @@
 <header id="uthinx-search-header" class="uthinx-blue">
-    <section class="swiper-container">
-        <div id="uthinx-search-swiper" class='swiper-wrapper'>
+    <section id="uthinx-search-swiper" class="swiper-container">
+        <div id="uthinx-search-swiper-wrapper" class='swiper-wrapper'>
 
         </div>
     </section>
     <nav id="uthinx-search-swiper-pagination" class="uthinx-swiper-pagination-bottom"></nav>
+    <a href="#" class="close-btn">&nbsp;</a>
 </header>
-<section id="uthinx-search-body">
-    <a href="#" class="close-btn">Close</a>
+<main id="uthinx-search-body" class="uthinx-search-body">
     <div class="uthinx-nano"><!-- user for mobile scroll control -->
         <div class="overthrow uthinx-nano-content">
             <article id="uthinx-search-main" class="uthinx-search-main">
-
+                <ul id="uthinx-search-main-list" class="uthinx-search-main-list">
+                    <li id="uthinx-search-loader" class="uthinx-search-loader">
+                        Results...
+                    </li>
+                </ul>
             </article>
         </div>
     </div>
-</section>
-<footer></footer>
+</main>
+<footer>
+
+</footer>
+
