--- a/uthinx/app/templates/entityTemplate.hbs
+++ b/uthinx/app/templates/entityTemplate.hbs
@@ -1,5 +1,6 @@
 {{#each []}}
-<header class="navbar navbar-default navbar-fixed-top" role="navigation">
+<header class="navbar navbar-default navbar-absolute-top" role="navigation">
+    <nav id="uthinx-profile-swiper-pagination" class="uthinx-swiper-pagination-top"></nav>
     <div class="container">
         <div class="navbar-header">
             <button id="mmenu-btn" type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -8,12 +9,10 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">{{ this.entity_name }}</a>
         </div>
     </div>
 </header>
 <header id="uthinx-profile-slide-header">
-    <nav id="uthinx-profile-swiper-pagination" class="uthinx-swiper-pagination-top"></nav>
     <!-- -->
     <article class="uthinx-slide-header-inner circle-inner-header">
         <div class="choice"></div>
@@ -27,6 +26,7 @@
         <div class="choice"></div>
     </article>
     <article class="uthinx-slide-header-inner entity-inner-header">
+        <div class="entity-name">{{ this.entity_name }}</div>
         <div class="entity-profile-img">
             <div class="profile-bubble"></div>
             <img src="{{ this.entity_profile_img }}" class="entity-profile-inner"/>
@@ -43,7 +43,7 @@
     <section id='uthinx-profile-swiper' class="swiper-container">
         <div class="swiper-wrapper">
             <!-- -->
-            {{#each this.polls}}
+            {{#each this.entity_polls}}
             <article class="swiper-slide poll-header" data-catagory="{{ this.poll_catagory_id }}">
                 <div class="catagory-title">{{ this.poll_catagory }}</div>
                 <div class="desc-title">{{ this.poll_description }}</div>
@@ -59,19 +59,19 @@
                     </a>
                 </nav>
             </article>
-                {{/each}}
+            {{/each}}
         </div>
     </section>
     <a href="#" class="uthinx-slide-header-profile-alt-page-btn"></a>
 </header>
 <!-- -->
-<section class="profile-page-body">
+<main class="profile-page-body">
     <div class="uthinx-nano"><!-- user for mobile scroll control -->
         <div class="overthrow uthinx-nano-content">
             Body
         </div>
     </div>
-</section>
+</main>
 <nav class="profile-footer-nav">
     <a href="#" id="search-btn" class="find">find</a>
     <a id="uthinx-question-cube" class="cube">
