--- a/uthinx/app/templates/mmenuTemplate.hbs
+++ b/uthinx/app/templates/mmenuTemplate.hbs
@@ -4,7 +4,7 @@
             <span>Entity Name</span>
             <span>Sub Name or something else</span>
         </header>
-        <nav>
+        <main>
             <a href="#">
                 Settings
                 <span class="label label-default">Default</span>
@@ -79,6 +79,6 @@
                 About
                 <span class="label label-success">Success</span>
             </a>
-        </nav>
+        </main>
     </div>
 </div>
